# visco

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-citest.yaml  python-package.yaml  python-publish.yaml  python-test.yaml
docs/source/: conf.py  index.rst
docs/source/how-to/: installation.rst  usage.rst
docs/source/reference/: compressms_reference.rst  decompressms_reference.rst  reference.rst
docs/source/tutorials/: tutorials.rst
tenv/: pyvenv.cfg
tests/: compression_tests.py  decompression_tests.py  pipeline_tests.py
tests/data/sim-visco-kat7.ms/: table.f0  table.f1  table.f2  table.f2_TSM1  table.f3  table.f4  table.f5
tests/data/sim-visco-kat7.ms/OBSERVATION/: table.f0
tests/data/sim-visco-kat7.ms/POINTING/: table.f0  table.f1
tests/data/sim-visco-kat7.ms/SOURCE/: table.f0
tests/data/sim-visco-kat7.ms/SPECTRAL_WINDOW/: table.f0  table.f0i
visco/: __init__.py  archive.py  compress.py  compress_ms.py  decompress.py  decompress_ms.py  msmodify.py  msvolume.py  reconstruction.py  svdcompressor.py  test.ipynb  testsagain copy 2.ipynb  utilities.py
visco/parser_config/: __init__.py  archival.py  compressms.py  compressms.yaml  decompressms.py  decompressms.yaml
visco/schemas/: schema_compressms.yaml  schema_decompression.yaml
