[tool.poetry]
name = "visco"
version = "0.1.0"
description = "A tool for compressing visibility data using singular value decomposition (SVD)"
authors = ["MukundiRams <2094318@students.wits.ac.za>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dask-ms = {extras = ["xarray"], version = "^0.2.21"}
zarr = "2.18.3"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
